--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-22 14:30+0300\n"
+"POT-Creation-Date: 2020-08-05 13:53+0000\n"
 "PO-Revision-Date: 2020-07-22 15:17+0000\n"
 "Last-Translator: b'  <vladkozulin@mail.ru>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,22 +16,48 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
+"%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Translated-Using: django-rosetta 0.9.3\n"
 
-#: .\account\templates\registration\login.html:23
+#: account/templates/registration/login.html:23
 msgid "Login via VKontakte"
-msgstr "Залогиниться через ВК"
+msgstr "Зарегестрируйтесь через вк"
 
-#: .\mysite\ReadMe.txt:29
+#: cart/form.py:11
+msgid "Quantity"
+msgstr "Колличество"
+
+#: mysite/ReadMe.txt:29
 #, python-format
 msgid "Hello %(name)s!"
 msgstr ""
 
-#: .\mysite\settings.py:104
+#: mysite/settings.py:106
 msgid "English"
 msgstr "Английский"
 
-#: .\mysite\settings.py:105
+#: mysite/settings.py:107
 msgid "Russian"
 msgstr "Русский"
+
+#: shop/templates/shop/base.html:16
+msgid "Language"
+msgstr "Язык"
+
+#: shop/templates/shop/base.html:33
+msgid " Your cart "
+msgstr " Ваша тачка "
+
+#: shop/templates/shop/base.html:39
+msgid " Your cart is empty. "
+msgstr " Ваша карета пуста. "
+
+#: shop/templates/shop/product/list.html:6
+msgid "Products"
+msgstr "Продукты"
+
+#: shop/templates/shop/product/list.html:10
+msgid " Categories"
+msgstr "Категории"
